--- a/index.html
+++ b/index.html
@@ -1,38 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Title</title>
-    <style>
-      #game {
-        border: 1px solid black;
-      }
-    </style>
-  </head>
-  <body>
-    <canvas id="game" width="600px" height="600px"></canvas>
-    <script>
-      let canvas = document.getElementById("game");
-      let context = canvas.getContext("2d");
-      let character_image = new Image();
-      character_image.src = "characterImage.png";
-      character_image.onload = draw;
-
-      let player_position_x = 0;
-
-      // document.addEventListener("DOMContentLoaded", function (){
-      // })
-      function draw() {
-        context.clearRect(0, 0, 600, 600);
-        context.drawImage(character_image, 100, 100, 300, 150);
-        player_position_x += 5;
-        context.requestAnimationFrame(draw);
-      }
-
-      // document.addEventListener("DOMContentLoaded", function () {
-      //     context.drawImage(character_image, 100, 100, 50, 50)
-      //
-      // });
-    </script>
-  </body>
+<head>
+    <meta charset="UTF-8">
+    <title>Home - Sliterhin' Snake </title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+    <a href="homepagina.html"><button>Home</button></a>
+    <nav class="gamename">
+    <ul>
+    <li><a href="#">Sliterhin' Snake</a>
+    </li>
+    </nav><a href="contact.html"><button>Contact</button></a></header>
+    <div class="about_us">
+    <a href="AboutUsTarik.html">About us</a></h1>
+    <a href="FavGamesTarik.html">Fav games</a></h1>
+    </div>
+    <h1 id="titel_homepagina"> Welkom! </h1>
+    <div id="code_game"> <img src="pictures/snake.jpg"> </div>
+    <div id="welcome_text"><p> <strong> Welkom bij onze website! </strong> <br> Bij deze website bieden wij onze nieuwe game uit, genaamd Sliterhin Snake. Verder praten wij over onszelf, 
+        over onze favoriete games en natuurlijk de game! Veel leesplezier en speelplezier! </br></p></div>
+    <footer>
+    <p class="footertext">Copyright 2023 Tarik Metin, Robert Ciolacu, Jad Abdulmajid. All Rights Reserved</p>
+    </footer>
+</body>
 </html>
