--- a/AboutUsRobert.html
+++ b/AboutUsRobert.html
@@ -22,5 +22,18 @@
         <a href="AboutUsTarik.html">About Tarik</a>
         <a href="AboutUsRobert.html">About Robert</a>
         </div>
+        <hr>  
+            <h1> Robert</h1> 
+            <h2> About Me </h2>
+            <p> Hallo, mijn naam is Robert, ik ben 17 jaar oud en ik volg de opleiding genaamd Software Developer, 
+                in de opleiding leer je wat je met verschillende programmeertalen kunt doen, hoe je echte code moet 
+                schrijven voor een opdracht bijvoorbeeld, hoe je met je teamgenoten netjes en beschaafd kunt 
+                communiceren en hoe je je stap bij stap in de mindset of een programmeur wordt. Mijn hobby’s
+                zijn gamen, series en sporten, merendeels geïnteresseerd in programmeren en hoe ik zelf sommige
+                problemen kan oplossen met code.
+                 </p>
+                 <footer>
+                    <p class="footertext">Copyright 2023 Tarik Metin, Robert Ciolacu, Jad Abdulmajid. All Rights Reserved</p>
+                    </footer>
 </body>
 </html>
